#базовая обработка переходов в фидбэк

--- a/android/app/src/main/res/values/styles.xml
+++ b/android/app/src/main/res/values/styles.xml
@@ -8,8 +8,8 @@
         <item name="android:windowLayoutInDisplayCutoutMode" tools:targetApi="p">
             shortEdges <!-- default, shortEdges, never -->
         </item>
-        <item name="android:colorControlActivated">#FFA500</item>
-        <item name="android:textColorHighlight">#FFA500</item>
+        <item name="android:colorControlActivated">#000000</item>
+        <item name="android:textColorHighlight">#999999</item>
     </style>
 
 
