--- a/android/app/src/main/res/layout/launch_screen.xml
+++ b/android/app/src/main/res/layout/launch_screen.xml
@@ -2,7 +2,7 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:background="#2862AC"
+                android:background="#143463"
                 android:orientation="vertical">
 
 
@@ -24,5 +24,5 @@
         android:fontFamily="@font/montserrat_bold"
         android:layout_centerHorizontal="true"
         android:layout_below="@+id/logo"
-        android:text="ООО 'Академия Права'" />
+        android:text="Ваш юрист" />
 </RelativeLayout>
