--- a/android/app/src/main/res/values/styles.xml
+++ b/android/app/src/main/res/values/styles.xml
@@ -12,7 +12,7 @@
         <item name="android:textColorHighlight">#999999</item>
         <item name="android:forceDarkAllowed" tools:targetApi="q"> false </item>
         <item name="android:windowDisablePreview">true</item>
-        <item name="android:navigationBarColor">#2862AC</item>
+        <item name="android:navigationBarColor">#143463</item>
         <item name="android:windowIsTranslucent">true</item>
 
     </style>
@@ -20,7 +20,7 @@
 
     <style name="SplashScreenTheme" parent="SplashScreen_SplashTheme">
         <item name="colorPrimaryDark">@color/status_bar_color</item>
-        <item name="android:navigationBarColor">#2862AC</item>
+        <item name="android:navigationBarColor">#143463</item>
     </style>
     <style name="DialogDatePicker.Theme" parent="Theme.AppCompat.Light.Dialog">
         <item name="colorAccent">#FFA500</item>
